@@ -1,0 +1,73 @@
+/*
+	CollageController.m
+	
+	An extensible graphics editor demonstrating EtoileUI as a toolkit to build 
+	structured graphics editor.
+ 
+	Copyright (C) 2008 Quentin Mathe
+ 
+	Author:  Quentin Mathe <qmathe@club-internet.fr>
+	Date:  December 2008
+ 
+	Redistribution and use in source and binary forms, with or without
+	modification, are permitted provided that the following conditions are met:
+
+	* Redistributions of source code must retain the above copyright notice,
+	  this list of conditions and the following disclaimer.
+	* Redistributions in binary form must reproduce the above copyright notice,
+	  this list of conditions and the following disclaimer in the documentation
+	  and/or other materials provided with the distribution.
+	* Neither the name of the Etoile project nor the names of its contributors
+	  may be used to endorse or promote products derived from this software
+	  without specific prior written permission.
+
+	THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
+	AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
+	IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
+	ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE
+	LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
+	CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
+	SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
+	INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
+	CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
+	ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF
+	THE POSSIBILITY OF SUCH DAMAGE.
+ */
+
+#import "CollageController.h"
+//#import <EtoileUI/ETInstruments.h>
+//#import <EtoileFoundation/ETModelDescription.h>
+
+
+@implementation CollageController
+
+- (void) applicationDidFinishLaunching: (NSNotification *)notif
+{
+	[[ETApp mainMenu] addItem: [ETApp arrangeMenuItem]];
+
+	mainItem = [ETLayoutItem itemGroupWithContainer];
+	[mainItem setSize: NSMakeSize(500, 400)];
+	[mainItem setLayout: [ETFreeLayout layout]];
+	[[ETLayoutItem windowGroup] addItem: mainItem];
+
+	/*[mainItem addItem: [ETLayoutItem horizontalSlider]];
+	[mainItem addItem: [ETLayoutItem textField]];
+	[mainItem addItem: [ETLayoutItem labelWithTitle: @"Hello World!"]];*/
+	[mainItem addItem: [ETLayoutItem button]];
+	[mainItem addItem: [ETLayoutItem rectangle]];
+	[mainItem addItem: [ETLayoutItem oval]];
+	//[mainItem addItem: AUTORELEASE([[ETSelectionAreaItem alloc] init])];
+
+	ETFlowLayout *flow = [ETFlowLayout layout];
+	[flow setItemSizeConstraintStyle: ETSizeConstraintStyleNone];
+	[(ETFreeLayout *)[mainItem layout] resetItemPersistentFramesWithLayout: flow];
+	//[[mainItem layout] setAttachedInstrument: [ETMoveTool instrument]];
+	//[ETInstrument setMainInstrument: [ETSelectTool instrument]];
+	//[[ETPickboard localPickboard] showPickPalette];
+
+	//[[ETModelDescription modelDescription] view: nil];
+	
+	//[ETApp explore: nil];
+}
+
+@end
