@@ -1,3 +1,8 @@
+2009-03-05  Quentin Mathe <qmathe@club-internet.fr>
+
+	* Collage:
+	Added a preliminary structured graphics editor example.
+
 2009-02-17  Quentin Mathe <qmathe@club-internet.fr>
 
 	* ETLayoutItem:
